Work in Progress

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -87,7 +87,7 @@
     "    \"stat_procedure\": \"gpb\",\n",
     "    \"global_stats\": {\n",
     "        \"min\": np.array([0.0, 0.0, 0.0, 0.0, 0.0, 0.0] * 3),\n",
-    "        \"max\": np.array([271.0, 315.0, 464.0, 786.0, 869.0, 775.0] * 3),\n",
+    "        \"max\": np.array([300.0, 350.0, 500.0, 800.0, 900.0, 850.0] * 3),\n",
     "        \"mean\": np.array([377.9830716, 653.4058739, 702.1834053, 2573.849324, 2344.568628, 1432.163695] * 3),\n",
     "        \"std\": np.array([171.5116587, 215.5407551, 364.3545396, 686.5730746, 769.6448444, 675.9192684] * 3)\n",
     "    },\n",
@@ -106,7 +106,7 @@
     "\n",
     "    # model initialization params\n",
     "    \"n_classes\": 14,\n",
-    "    \"input_channels\": 12,\n",
+    "    \"input_channels\": 18,\n",
     "    \"filter_config\": (64, 128, 256, 512, 1024, 1024),\n",
     "    \"use_skipAtt\": False,\n",
     "    \"train_dropout_rate\": 0.15,\n",
@@ -118,7 +118,7 @@
     "           7:\"Winter Wheats\", 8:\"Other Hay/Non Alfalfa\", 9:\"Corn\", 10:\"Soybeans\", 11:\"Cottons\", 12:\"Sorghum\", 13:\"Other Crops\"},\n",
     "    \"gpuDevices\": [0],\n",
     "    \"init_type\": \"kaiming\",\n",
-    "    \"params_init\": \"/home/data/chkpt/Unet_final_state.pth\",\n",
+    "    \"params_init\": None,\n",
     "    \"freeze_params\": None,\n",
     "    \n",
     "    # Model fitting\n",
@@ -126,7 +126,7 @@
     "    \"optimizer\": \"sam\",\n",
     "    \"LR\": 0.01,\n",
     "    \"LR_policy\": \"PolynomialLR\",\n",
-    "    \"criterion\": \"TverskyFocalCELoss(weight=[0.002539, 0.003086, 0.030139, 0.019021, 0.036699, 0.042473, 0.01405, 0.078166, 0.149378, 0.157826, 0.206315, 0.206709, 0.053593], ignore_index=0)\",\n",
+    "    \"criterion\": \"TverskyFocalLoss(weight=[0.002539, 0.003086, 0.030139, 0.019021, 0.036699, 0.042473, 0.01405, 0.078166, 0.149378, 0.157826, 0.206315, 0.206709, 0.053593], ignore_index=0)\",\n",
     "    \"momentum\": 0.95,\n",
     "    \"resume\": False,\n",
     "    \"resume_epoch\": None,\n",
@@ -338,7 +338,7 @@
     "                               out_dir=config[\"out_dir\"],\n",
     "                               num_classes=config[\"n_classes\"],\n",
     "                               inch=config[\"input_channels\"],\n",
-    "                               class_mapping=config[\"class_mapping\"]\n",
+    "                               class_mapping=config[\"class_mapping\"],\n",
     "                               gpu_devices=config[\"gpuDevices\"],\n",
     "                               model_init_type=config[\"init_type\"], \n",
     "                               params_init=config[\"params_init\"],\n",
