Work in Progress

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -78,7 +78,7 @@
     "    \n",
     "    # Custom dataset params\n",
     "    \"src_dir\": \"/home/data\",\n",
-    "    \"train_dataset_name\": \"chips_multi_filtered\",\n",
+    "    \"train_dataset_name\": \"chips_filtered\",\n",
     "    \"train_csv_path\": \"/home/workdir/train_ids.csv\",\n",
     "    \"val_csv_path\": \"/home/workdir/val_ids.csv\",\n",
     "    \"split_ratio\": 0.8,\n",
@@ -113,9 +113,11 @@
     "\n",
     "    # Model compiler params\n",
     "    \"working_dir\": \"/home/workdir\",\n",
-    "    \"out_dir\": \"output3\",\n",
-    "    \"class_mapping\": {0:\"Unknown\", 1:\"Grassland\", 2:\"Forest\", 3:\"Shrubs\", 4:\"Developed\", 5:\"Open Water\", 6:\"Woody Wetlands\",\n",
-    "           7:\"Winter Wheats\", 8:\"Other Hay/Non Alfalfa\", 9:\"Corn\", 10:\"Soybeans\", 11:\"Cottons\", 12:\"Sorghum\", 13:\"Other Crops\"},\n",
+    "    \"out_dir\": \"/home/workdir/output2\",\n",
+    "    \"class_mapping\": {0:\"Unknown\", 1: \"Shrubland\", 2: \"Grassland/Pasture\", 3: \"Forest\", 4: \"Corn\", 5:\"Soybeans\", 6: \"Wetlands\",\n",
+    "                      7: \"Developed\", 8:\"Open Water\", 9: \"Winter Wheat\", 10: \"Other Hay/Non Alfalfa\", 11: \"Alfalfa\",\n",
+    "                      12: \"Fallow/Idle Cropland\", 13: \"Barren\", 14: \"Cotton\", 15: \"Sorghum\", 16:\"Other\"},\n",
+    "                      \n",
     "    \"gpuDevices\": [0],\n",
     "    \"init_type\": \"kaiming\",\n",
     "    \"params_init\": None,\n",
@@ -126,7 +128,7 @@
     "    \"optimizer\": \"sam\",\n",
     "    \"LR\": 0.01,\n",
     "    \"LR_policy\": \"PolynomialLR\",\n",
-    "    \"criterion\": \"TverskyFocalLoss(weight=[0.002539, 0.003086, 0.030139, 0.019021, 0.036699, 0.042473, 0.01405, 0.078166, 0.149378, 0.157826, 0.206315, 0.206709, 0.053593], ignore_index=0)\",\n",
+    "    \"criterion\": \"TverskyFocalLoss(weight=[0.023839441, 0.141533235, 0.115825893, 0.14021708, 0.124164449, 0.095742291, 0.080351933, 0.029785156, 0.042391139, 0.029357087, 0.03725627, 0.033638325, 0.001587225, 0.020611555, 0.017460882, 0.066238038], ignore_index=0)\",\n",
     "    \"momentum\": 0.95,\n",
     "    \"resume\": False,\n",
     "    \"resume_epoch\": None,\n",
@@ -161,6 +163,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "96157f61-78c2-4a5e-8208-f82795ecf6cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "split_dataset(src_dir=config[\"src_dir\"], dataset_name=config[\"train_dataset_name\"], split_ratio=config[\"split_ratio\"], out_dir=config[\"out_dir\"], seed=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8b00efdb-8a76-4271-b77d-fb95faac315c",
    "metadata": {},
    "outputs": [],
@@ -172,7 +184,6 @@
     "                         usage=\"train\",\n",
     "                         dataset_name=config[\"train_dataset_name\"],\n",
     "                         csv_path=config[\"train_csv_path\"],\n",
-    "                         split_ratio=config[\"split_ratio\"],\n",
     "                         apply_normalization=config[\"apply_normalization\"],\n",
     "                         normal_strategy=config[\"normal_strategy\"],\n",
     "                         stat_procedure=config[\"stat_procedure\"],\n",
@@ -256,7 +267,7 @@
     "                       apply_normalization=config[\"apply_normalization\"],\n",
     "                       normal_strategy=config[\"normal_strategy\"],\n",
     "                       stat_procedure=config[\"stat_procedure\"],\n",
-    "                       global_stats=config[\"global_stats\"])"
+    "                       global_stats=config[\"global_stats\"],)"
    ]
   },
   {
