Work in Progress

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "999903df-c07c-4c4f-bd02-791a07f4d06e",
+   "id": "0a5101f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,8 +74,8 @@
     "# [\"v_flip\", \"h_flip\", \"d_flip\", \"rotate\", \"resize\", \"shift_brightness\"]\n",
     "# \"/home/data/chkpt/Unet_final_state.pth\"\n",
     "\n",
+    "\n",
     "config = {\n",
-    "    \n",
     "    # Custom dataset params\n",
     "    \"src_dir\": \"/home/data\",\n",
     "    \"train_dataset_name\": \"chips_filtered\",\n",
@@ -88,59 +88,71 @@
     "    \"global_stats\": {\n",
     "        \"min\": np.array([0.0, 0.0, 0.0, 0.0, 0.0, 0.0] * 3),\n",
     "        \"max\": np.array([300.0, 350.0, 500.0, 800.0, 900.0, 850.0] * 3),\n",
-    "        \"mean\": np.array([377.9830716, 653.4058739, 702.1834053, 2573.849324, 2344.568628, 1432.163695] * 3),\n",
-    "        \"std\": np.array([171.5116587, 215.5407551, 364.3545396, 686.5730746, 769.6448444, 675.9192684] * 3)\n",
+    "        \"mean\": np.array([\n",
+    "            377.9830716, 653.4058739, 702.1834053, \n",
+    "            2573.849324, 2344.568628, 1432.163695\n",
+    "        ] * 3),\n",
+    "        \"std\": np.array([\n",
+    "            171.5116587, 215.5407551, 364.3545396, \n",
+    "            686.5730746, 769.6448444, 675.9192684\n",
+    "        ] * 3)\n",
     "    },\n",
-    "    \"transformations\": [\"v_flip\", \"h_flip\", \"d_flip\", \"rotate\", \"resize\", \"shift_brightness\"],\n",
+    "    \"transformations\": [\n",
+    "        \"v_flip\", \"h_flip\", \"d_flip\", \n",
+    "        \"rotate\", \"resize\", \"shift_brightness\"\n",
+    "    ],\n",
     "    \"aug_params\": {\n",
-    "        \"scale_factor\": (0.75, 1.3), \n",
-    "        \"rotation_degree\": (-180, -90, 90, 180), \n",
-    "        \"bshift_gamma_range\": (0.2, 2), \n",
-    "        \"bshift_subs\": (6, 6, 6), \n",
+    "        \"scale_factor\": (0.75, 1.3),\n",
+    "        \"rotation_degree\": (-180, -90, 90, 180),\n",
+    "        \"bshift_gamma_range\": (0.2, 2),\n",
+    "        \"bshift_subs\": (6, 6, 6),\n",
     "        \"patch_shift\": True\n",
     "    },\n",
-    "\n",
     "    # DataLoader\n",
     "    \"train_BatchSize\": 10,\n",
     "    \"val_test_BatchSize\": 1,\n",
-    "\n",
-    "    # model initialization params\n",
+    "    # Model initialization params\n",
     "    \"n_classes\": 14,\n",
     "    \"input_channels\": 18,\n",
     "    \"filter_config\": (64, 128, 256, 512, 1024, 1024),\n",
     "    \"use_skipAtt\": False,\n",
     "    \"train_dropout_rate\": 0.15,\n",
-    "\n",
     "    # Model compiler params\n",
     "    \"working_dir\": \"/home/workdir\",\n",
     "    \"out_dir\": \"/home/workdir/output2\",\n",
-    "    \"class_mapping\": {0:\"Unknown\", 1: \"Shrubland\", 2: \"Grassland/Pasture\", 3: \"Forest\", 4: \"Corn\", 5:\"Soybeans\", 6: \"Wetlands\",\n",
-    "                      7: \"Developed\", 8:\"Open Water\", 9: \"Winter Wheat\", 10: \"Other Hay/Non Alfalfa\", 11: \"Alfalfa\",\n",
-    "                      12: \"Fallow/Idle Cropland\", 13: \"Barren\", 14: \"Cotton\", 15: \"Sorghum\", 16:\"Other\"},\n",
-    "                      \n",
+    "    \"class_mapping\": {\n",
+    "        0:\"Unknown\", 1: \"Shrubland\", 2: \"Grassland/Pasture\", \n",
+    "        3: \"Forest\", 4: \"Corn\", 5:\"Soybeans\", 6: \"Wetlands\",\n",
+    "        7: \"Developed\", 8:\"Open Water\", 9: \"Winter Wheat\", \n",
+    "        10: \"Other Hay/Non Alfalfa\", 11: \"Alfalfa\",\n",
+    "        12: \"Fallow/Idle Cropland\", 13: \"Barren\", \n",
+    "        14: \"Cotton\", 15: \"Sorghum\", 16:\"Other\"\n",
+    "    },\n",
     "    \"gpuDevices\": [0],\n",
     "    \"init_type\": \"kaiming\",\n",
     "    \"params_init\": None,\n",
     "    \"freeze_params\": None,\n",
-    "    \n",
     "    # Model fitting\n",
     "    \"epochs\": 50,\n",
     "    \"optimizer\": \"sam\",\n",
     "    \"LR\": 0.01,\n",
     "    \"LR_policy\": \"PolynomialLR\",\n",
-    "    \"criterion\": \"TverskyFocalLoss(weight=[0.023839441, 0.141533235, 0.115825893, 0.14021708, 0.124164449, 0.095742291, 0.080351933, 0.029785156, 0.042391139, 0.029357087, 0.03725627, 0.033638325, 0.001587225, 0.020611555, 0.017460882, 0.066238038], ignore_index=0)\",\n",
+    "    \"criterion\": (\"TverskyFocalLoss(weight=[0.023839441, 0.141533235, 0.115825893,\"\n",
+    "              \"0.14021708, 0.124164449, 0.095742291, 0.080351933, 0.029785156,\"\n",
+    "              \"0.042391139, 0.029357087, 0.03725627, 0.033638325, 0.001587225,\"\n",
+    "              \"0.020611555, 0.017460882, 0.066238038], ignore_index=0)\"),\n",
     "    \"momentum\": 0.95,\n",
     "    \"resume\": False,\n",
     "    \"resume_epoch\": None,\n",
     "    \"lr_prams\": {\n",
     "        # StepLR & MultiStepLR\n",
-    "        \"step_size\" : 3,\n",
-    "        \"milestones\": [5, 10, 20, 35, 50, 70, 90], \n",
-    "        \"gamma\": 0.98, \n",
+    "        \"step_size\": 3,\n",
+    "        \"milestones\": [5, 10, 20, 35, 50, 70, 90],\n",
+    "        \"gamma\": 0.98,\n",
     "        # ReduceLROnPlateau\n",
-    "        \"mode\": \"min\", \n",
-    "        \"factor\": 0.8, \n",
-    "        \"patience\": 3, \n",
+    "        \"mode\": \"min\",\n",
+    "        \"factor\": 0.8,\n",
+    "        \"patience\": 3,\n",
     "        \"threshold\": 0.0001,\n",
     "        \"threshold_mode\": \"rel\",\n",
     "        \"min_lr\": 3e-6,\n",
@@ -154,20 +166,9 @@
     "        \"step_size_up\": 1100,\n",
     "        \"mode\": \"triangular\"\n",
     "    },\n",
-    "    \n",
     "    # Model accuracy evaluation\n",
     "    \"val_metric_fname\" : \"validate_metrics_global_V2.csv\"   \n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "96157f61-78c2-4a5e-8208-f82795ecf6cf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "split_dataset(src_dir=config[\"src_dir\"], dataset_name=config[\"train_dataset_name\"], split_ratio=config[\"split_ratio\"], out_dir=config[\"out_dir\"], seed=0)"
+    "}\n"
    ]
   },
   {
