Work in Progress

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -105,6 +105,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48349d96-0920-475c-9951-dd7196d847cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config['criterion']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "cd5f12c3-a3d7-466e-8f4d-3978cd90052a",
    "metadata": {},
@@ -296,13 +306,24 @@
     "# Note: In case the training process is interrupted, you can change the \"resume\" argument and pass in the\n",
     "# epoch to resume based on the created checkpoints.\n",
     "\n",
+    "criterion_name = config['criterion']['name']\n",
+    "weight = config['criterion']['weight']\n",
+    "ignore_index = config['criterion']['ignore_index']\n",
+    "gamma = config['criterion']['gamma']\n",
+    "\n",
+    "if criterion_name == 'TverskyFocalLoss':\n",
+    "    criterion = TverskyFocalLoss(weight=weight, ignore_index=ignore_index, gamma=gamma)\n",
+    "else:\n",
+    "    criterion = TverskyFocalLoss(weight=weight, ignore_index=ignore_index)\n",
+    "    \n",
+    "\n",
     "compiled_model.fit(train_loader,\n",
     "                   val_loader, \n",
     "                   epochs=config[\"epochs\"], \n",
     "                   optimizer_name=config[\"optimizer\"], \n",
     "                   lr_init=config[\"LR\"],\n",
     "                   lr_policy=config[\"LR_policy\"], \n",
-    "                   criterion=config[\"criterion\"], \n",
+    "                   criterion=criterion, \n",
     "                   momentum=config[\"momentum\"],\n",
     "                   checkpoint_interval=config[\"checkpoint_interval\"],\n",
     "                   resume=config[\"resume\"],\n",
