--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -63,6 +63,7 @@
     "from custom_dataset import CropData\n",
     "from models.unet import Unet\n",
     "from model_compiler import ModelCompiler\n",
+    "from custom_loss_functions import *\n",
     "from utils import *"
    ]
   },
@@ -304,7 +305,7 @@
     "if criterion_name == 'TverskyFocalLoss':\n",
     "    criterion = TverskyFocalLoss(weight=weight, ignore_index=ignore_index, gamma=gamma)\n",
     "else:\n",
-    "    criterion = TverskyFocalLoss(weight=weight, ignore_index=ignore_index)\n",
+    "    criterion = nn.CrossEntropyLoss(weight=weight, ignore_index=ignore_index)\n",
     "    \n",
     "\n",
     "compiled_model.fit(train_loader,\n",
