work in progress

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -343,7 +343,8 @@
    "source": [
     "# STEP 6\n",
     "# Generate the accuracy metrics.\n",
-    "metrics = compiled_model.accuracy_evaluation(val_loader, filename=config[\"val_metric_fname\"])"
+    "metrics = compiled_model.accuracy_evaluation(val_loader, filename=config[\"val_metric_fname\"], \n",
+    "                                             unknown_class_idx=config[\"unknown_class_idx\"])"
    ]
   },
   {
